--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Pokemon</string>
     <string name="pokemon_image">Pokemon Image</string>
+    <string name="dispositivos_moveis">Dispositivos Moveis</string>
+
 </resources>
