--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,17 @@
     <string name="app_name">Pokemon</string>
     <string name="pokemon_image">Pokemon Image</string>
     <string name="dispositivos_moveis">Dispositivos Moveis</string>
-
+    <string name="developer_samantha">Developer: Samantha</string>
+    <string name="returnPage">Return</string>
+    <string name="checkPokemons">Check All Pokemons</string>
+    <string name="login">Login</string>
+    <string name="nome">Nome</string>
+    <string name="registrar">Sign up</string>
+    <string name="nome_completo">Full name</string>
+    <string name="buttonRegister">Register</string>
+    <string name="e_mail">E-mail</string>
+    <string name="senha">Password</string>
+    <string name="logIn">Login</string>
+    <string name="your_data_has_been_stored">Your data has been stored!</string>
+    <string name="storedValor">Hello!</string>
 </resources>
